# akowe

./: .dockerignore  .env.example  .env.production.example  .flake8  .gitignore  CLAUDE.md  Dockerfile  Jenkinsfile  Makefile  PODMAN.md  README.md  __init__.py  alembic.ini  app.py  backup_data.sh  check_podman_setup.sh  cleanup_podman.sh  create_admin.py  create_docker_admin.py  db-schema.sql  deploy_to_k8s.sh  direct_setup.py  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  fix-ssl.sh  fix_sqlite_migrations.py  force-renew-cert.sh  income_export.csv  init-letsencrypt.sh  init_db.py  monitor_pods.sh  podman-compose.yml  pyproject.toml  requirements.txt  run.sh  run_dev.py  run_migrations.py  run_with_podman.sh  (+6 more)
akowe/: __init__.py  admin.py  akowe.py  auth.py  decorators.py  factory.py  forms.py  test_api.py
data/: expense_export.csv  expense_sample.csv  income_sample.csv
deploy/: fix_migration_sqlite.sh
docs/: DEPLOYMENT.md  FLASK_TESTING.md  HOME_OFFICE_DEPLOYMENT.md  HOME_OFFICE_FIX.md  IMPLEMENTATION_NOTES.md  IMPORT_FIX.md  MIGRATION_FIXES.md  MIGRATION_README.md  Makefile  README_K8S.md  README_PODMAN.md  STAGING_DEPLOYMENT.md  TEMPLATE_TESTING.md  TEST_STRATEGY.md  api.md  invoice.md  mobile_api.md  project_plan.md  receipts.md  timesheet.md
k8s/: 01-config.yaml  02-deployment.yaml  02-deployment.yaml.20250420223415.bak  02-deployment.yaml.20250421083558.bak  02-deployment.yaml.20250421121027.bak  02-deployment.yaml.20250508152015.bak  02-deployment.yaml.20250511194543.bak  02-deployment.yaml.20250511203047.bak  (+20 more)
(+199 files in other folders)
