[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akowe"
version = "1.0.0"
description = "Financial Tracker for Freelancers"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\\.pyi?$'
exclude = '''
/(
    \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''